fix: Fixing script config.

--- a/plausible/simple_website/index.html
+++ b/plausible/simple_website/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>A simple site to test Plausible Analytics</title>
-    <script defer data-domain="localhost" src="http://localhost:8000/js/script.local.js"></script>
+    <script defer data-domain="dwyl.github.io/learn-analytics" src="https://analytics.dwyl.com/js/script.js"></script>
   </head>
   <body>
     <p>Just a simple HTML page to test if Plausible Analytics is working. Great for testing!</p>
